--- a/roles/elastic/disk/tasks/main.yml
+++ b/roles/elastic/disk/tasks/main.yml
@@ -1,2 +1,13 @@
 ---
 # tasks file for disk
+
+- name: task for creating volume group
+  lvg:
+      vg: "{ volume_group }"
+      pvs: { data_disk}
+      pesize: 4
+
+- name: Install lvm2 dependency
+  package:
+    name: lvm2
+    state: present
