--- a/roles/elastic/disk/tasks/main.yml
+++ b/roles/elastic/disk/tasks/main.yml
@@ -1,10 +1,12 @@
 ---
 # tasks file for disk
 
+
+
 - name: task for creating volume group
   lvg:
-      vg: "{ volume_group }"
-      pvs: "{ data_disk}"
+      vg: "{{ volume_group }}"
+      pvs: "{{ data_disk }}"
       pesize: 4
 
 - name: Install lvm2 dependency
