--- a/roles/elastic/install/tasks/main.yml
+++ b/roles/elastic/install/tasks/main.yml
@@ -3,15 +3,15 @@
 
 - name: Copy file 
   copy:
-    src: "{{ local_install_dir}}/repository-s3-"$version".zip"
-    dest: "{{ remote_install_dir}}/repository-s3-"$version".zip"
+    src: "{{ local_install_dir}}/elasticsearch-{{ elastic_version }}-x86_64.rpm"
+    dest: "{{ remote_install_dir}}/elasticsearch-{{ elastic_version }}-x86_64.rpm"
 
 - name: stop service 
   service: 
     name=elasticsearch
     state=stopped 
 
-- elasticsearch_plugin:
-    name: repository-s3
-    state: present
-    src: "file://{{ remote_install_dir}}/repository-s3-"$version".zip"
+- name: Install package.
+  yum:
+     name: "{{ remote_install_dir}}/elasticsearch-{{ elastic_version }}-x86_64.rpm"
+     state: present        
