--- a/roles/elastic/plugin/tasks/main.yml
+++ b/roles/elastic/plugin/tasks/main.yml
@@ -23,3 +23,8 @@
 - name: issue daemon-reload to pick up config changes
   systemd:
     daemon_reload: yes
+
+- name: Remove file
+  file:
+    path: "{{ remote_install_dir}}/repository-s3-{{elastic_version}}.zip"
+    state: absent
