--- a/roles/dns/configure/tasks/main.yml
+++ b/roles/dns/configure/tasks/main.yml
@@ -10,14 +10,14 @@
 
     - name: Create forward zone
       template:
-        src: kkh.net.db.j2
-        dest: /var/named/kkh.net.db
+        src: forward.db.j2
+        dest: "/var/named/{{ forward_zone}}.db"
       notify:
         - restart
 
     - name: Create reverse zone
       template:
-        src: 192.168.0.db.j2
-        dest: /var/named/192.168.0.db
+        src: reverse.db.j2
+        dest: "/var/named/{{ reverse_zone}}.db"
       notify:
         - restart
