--- a/inventories/singlenode.yml
+++ b/inventories/singlenode.yml
@@ -5,6 +5,8 @@ all: # keys must be unique, i.e. only one 'hosts' per group
             vars:
                 es_clustername: singlenode
                 es_elasticsearch_yml: "singlenode.elasticsearch.yml.j2"
+                es_discovery_seed_hosts : ['node1']
+                es_cluster_initial_master_nodes: ['node1']
             hosts:
                 node1:
               vars:
