--- a/roles/elastic/firewall/tasks/main.yml
+++ b/roles/elastic/firewall/tasks/main.yml
@@ -1,2 +1,14 @@
 ---
 # tasks file for firewall
+
+- firewalld:
+    port: {{ es_host_port}}/tcp
+    permanent: true
+    state: enabled
+    immediate: true
+
+- firewalld:
+    port: {{ es_transport_port}}/tcp
+    permanent: true
+    state: enabled
+    immediate: true
