--- a/roles/logstash/install/tasks/main.yml
+++ b/roles/logstash/install/tasks/main.yml
@@ -1,2 +1,42 @@
 ---
 # tasks file for install
+
+- name: Copy file 
+  copy:
+    src: "{{ local_install_dir}}/logstash-{{ elastic_version }}-x86_64.rpm"
+    dest: "{{ remote_install_dir}}/logstash-{{ elastic_version }}-x86_64.rpm"
+  tags:
+    - install  
+
+- name: Populate service facts
+  service_facts:    
+  tags:
+    - install  
+
+- name: stop service 
+  service: 
+    name: logstash
+    state: stopped 
+  when: ansible_facts.services['logstash.service'] is defined    
+  tags:
+    - install  
+
+- name: Install package.
+  yum:
+     name: "{{ remote_install_dir}}/logstash-{{ elastic_version }}-x86_64.rpm"
+     state: present        
+  tags:
+    - install  
+
+- name: issue daemon-reload to pick up config changes
+  systemd:
+    daemon_reload: yes
+  tags:
+    - install  
+
+- name: Remove file
+  file:
+    path: "{{ remote_install_dir}}/logstash-{{ elastic_version }}-x86_64.rpm"
+    state: absent     
+  tags:
+    - install  
