--- a/roles/kibana/uninstall/tasks/main.yml
+++ b/roles/kibana/uninstall/tasks/main.yml
@@ -1,2 +1,39 @@
 ---
 # tasks file for uninstall
+
+---
+# tasks file for uninstall
+
+- name: Populate service facts
+  service_facts:    
+  tags:
+    - uninstall  
+
+- name: stop service 
+  service: 
+    name: kibana
+    state: stopped 
+  when: ansible_facts.services['kibana.service'] is defined    
+  tags:
+    - uninstall  
+
+- name: Uninstall package.
+  yum:
+     name: "kibana*"
+     state: absent       
+  tags:
+    - uninstall  
+
+- name: Recursively remove directory
+  file:
+    path: /etc/kibana
+    state: absent
+  tags:
+    - uninstall  
+
+- name: Recursively remove directory
+  file:
+    path: /var/log/kibana
+    state: absent    
+  tags:
+    - uninstall  
