--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: Run command if ca.p12 does not exist
   ansible.builtin.command:
-    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil ca --out /etc/elasticsearch/certs/{{ es_clustername }}.p12" --pass "{{es_clustername}}"
+    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil ca --out "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --pass "{{es_clustername}}"
     creates: "/etc/elasticsearch/certs/{{ es_clustername }}.p12"
 
 - name: Change CA owner
