--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -29,4 +29,4 @@
 - name: Fetch ca 
   ansible.builtin.fetch:
     src: "/etc/elasticsearch/certs/{{ es_clustername }}.p12"
-    dest: "{{ local_install_dir"/{{ es_clustername }}.p12
+    dest: "{{ local_install_dir }}"/{{ es_clustername }}.p12
