--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -54,3 +54,18 @@
   tags:
     - ca
 
+- name: Create node  cert
+  ansible.builtin.command:
+    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}" --ip "{ ansible_eth0.ipv4.address }}"  --dns "{{ ansible_hostname}}" --name "{{ ansible_hostname }}.p12" --out "/etc/elasticsearch/certs" --pass "{{es_clustername}}"
+    creates: "/tmp/{{ es_clustername }}.p12"
+  when: ca_p12.stat.exists == false
+  tags:
+    - ca
+
+- name: Change node cert owner
+  ansible.builtin.file:
+    path: "/etc/elasticsearch/certs/{{ ansible_hostname }}.p12"
+    owner: elasticsearch
+    group: elasticsearch
+  tags:
+    - ca
