--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -56,14 +56,14 @@
 
 - name: Create node  cert
   ansible.builtin.command:
-    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}" --ip "{{ ansible_eth0.ipv4.address }}"  --dns "{{ ansible_hostname}}" --name "{{ ansible_hostname }}.p12" --out "/etc/elasticsearch/certs" --pass "{{es_clustername}}"
-    creates: "/etc/elasticsearch/certs/{{ ansible_hostname }}.p12"
+    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}" --ip "{{ ansible_eth0.ipv4.address }}"  --dns "{{ ansible_hostname}}" --name "{{ ansible_hostname }}.p12" --out "/etc/elasticsearch/certs/cert-{{ ansible_hostname }}.p12" --pass "{{es_clustername}}"
+    creates: "/etc/elasticsearch/certs/cert-{{ ansible_hostname }}.p12"
   tags:
     - ca
 
 - name: Change node cert owner
   ansible.builtin.file:
-    path: "/etc/elasticsearch/certs/{{ ansible_hostname }}.p12"
+    path: "/etc/elasticsearch/certs/cert-{{ ansible_hostname }}.p12"
     owner: elasticsearch
     group: elasticsearch
   tags:
