--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -69,17 +69,17 @@
   tags:
     - ca
 
-- name: Create http  cert
-  ansible.builtin.command:
-    cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil http --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}" --ip "{{ ansible_eth0.ipv4.address }}"  --dns "{{ ansible_hostname}}" --name "{{ ansible_hostname }}.p12" --out "/etc/elasticsearch/certs/http-{{ ansible_hostname }}.p12" --pass "{{es_clustername}}"
-    creates: "/etc/elasticsearch/certs/http-{{ ansible_hostname }}.p12"
-  tags:
-    - ca
+# - name: Create http  cert
+#   ansible.builtin.command:
+#     cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil http --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}" --ip "{{ ansible_eth0.ipv4.address }}"  --dns "{{ ansible_hostname}}" --name "{{ ansible_hostname }}.p12" --out "/etc/elasticsearch/certs/http-{{ ansible_hostname }}.p12" --pass "{{es_clustername}}"
+#     creates: "/etc/elasticsearch/certs/http-{{ ansible_hostname }}.p12"
+#   tags:
+#     - ca
 
-- name: Change node http owner
-  ansible.builtin.file:
-    path: "/etc/elasticsearch/certs/http-{{ ansible_hostname }}.p12"
-    owner: elasticsearch
-    group: elasticsearch
-  tags:
-    - ca
+# - name: Change node http owner
+#   ansible.builtin.file:
+#     path: "/etc/elasticsearch/certs/http-{{ ansible_hostname }}.p12"
+#     owner: elasticsearch
+#     group: elasticsearch
+#   tags:
+#     - ca
