--- a/inventories/singlenode.yml
+++ b/inventories/singlenode.yml
@@ -7,6 +7,7 @@ all: # keys must be unique, i.e. only one 'hosts' per group
                 es_elasticsearch_yml: "singlenode.elasticsearch.yml.j2"
                 es_discovery_seed_hosts : ['node1']
                 es_cluster_initial_master_nodes: ['node1']
+                es_tls: false
             hosts:
                 node1:
                   es_node_roles: ['master','data' ]
