--- a/inventories/singlenode.yml
+++ b/inventories/singlenode.yml
@@ -7,14 +7,14 @@ all: # keys must be unique, i.e. only one 'hosts' per group
                 es_elasticsearch_yml: "singlenode.elasticsearch.yml.j2"
                 es_discovery_seed_hosts : ['node1']
                 es_cluster_initial_master_nodes: ['node1']
-                es_tls: false
+                es_tls: true
             hosts:
                 node1:
                   es_node_roles: ['master','data' ]
         kibana:
             vars:
                 kbn_kibana_yml: "singlenode.kibana.yml.j2"
-                kbn_elasticsearch_hosts: ["http://node1:9200"]
+                kbn_elasticsearch_hosts: ["https://node1:9200"]
             children:
             hosts:
                 node1:
