--- a/inventories/singlenode.yml
+++ b/inventories/singlenode.yml
@@ -8,6 +8,7 @@ all: # keys must be unique, i.e. only one 'hosts' per group
                 es_discovery_seed_hosts : ['node1']
                 es_cluster_initial_master_nodes: ['node1']
                 es_tls: true
+                kbn_hostname: "kibana"
             hosts:
                 node1:
                   es_node_roles: ['master','data' ]
