--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -72,16 +72,16 @@
 
 - name: Create kibana  cert
   ansible.builtin.command:
-     cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}"   --dns "{{ kbn_hostname }}" --name "{{ kbn_hostname }}.p12" --out "/tmp/kbn_hostname }}.p12" --pass "{{es_clustername}}"
-     creates: "/etc/elasticsearch/certs/http-{{ ansible_hostname }}.p12"
+     cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}"   --dns "{{ kbn_hostname }}" --name "{{ es_clustername}}-{{ kbn_hostname }}.p12" --out "/tmp/{{es_cluster-name}}-{{kbn_hostname }}.p12" --pass "{{es_clustername}}"
+     creates: "/etc/elasticsearch/certs/{{ es_clustername}}-{{ kbn_hostname }}.p12"
 #  when: ca_p12.stat.exists == false 
   tags:
     - ca
 
 - name: Fetch kibana cert
   ansible.builtin.fetch:
-    src: "/tmp/{{ kbn_clustername }}.p12"
-    dest: "{{ local_install_dir }}/{{ es_clustername }}.p12"
+    src: "/tmp/{{ kbn_hostname }}.p12"
+    dest: "{{ local_install_dir }}/{{ es_clustername }}-{{ kbn_hostname}}.p12"
     flat: true
 #  when: ca_p12.stat.exists == false 
   tags:
