--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -73,7 +73,7 @@
 - name: Create kibana  cert
   ansible.builtin.command:
      cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}"   --dns "{{ kbn_hostname }}" --name "{{ es_clustername}}-{{ kbn_hostname }}.p12" --out "/tmp/{{es_clustername}}-{{kbn_hostname }}.p12" --pass "{{es_clustername}}"
-     creates: "/etc/elasticsearch/certs/{{ es_clustername}}-{{ kbn_hostname }}.p12"
+     creates: "/tmp/{{ es_clustername}}-{{ kbn_hostname }}.p12"
 #  when: ca_p12.stat.exists == false 
   tags:
     - ca
