--- a/roles/elastic/ca/tasks/main.yml
+++ b/roles/elastic/ca/tasks/main.yml
@@ -74,7 +74,7 @@
   ansible.builtin.command:
      cmd: /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca "/etc/elasticsearch/certs/{{ es_clustername }}.p12" --ca-pass "{{es_clustername}}"   --dns "{{ kbn_hostname }}" --name "{{ es_clustername}}-{{ kbn_hostname }}.p12" --out "/tmp/{{es_clustername}}-{{kbn_hostname }}.p12" --pass "{{es_clustername}}"
      creates: "/tmp/{{ es_clustername}}-{{ kbn_hostname }}.p12"
-#  when: ca_p12.stat.exists == false 
+  when: ca_p12.stat.exists == false 
   tags:
     - ca
 
@@ -83,10 +83,20 @@
     src: "/tmp/{{es_clustername}}-{{ kbn_hostname }}.p12"
     dest: "{{ local_install_dir }}/{{ es_clustername }}-{{ kbn_hostname}}.p12"
     flat: true
-#  when: ca_p12.stat.exists == false 
+  when: ca_p12.stat.exists == false 
   tags:
     - ca
 
+
+- name: Extract PEM
+  delegate_to: localhost
+  ansible.builtin.command:
+     cmd: openssl pkcs12 -in "{{ local_install_dir }}/{{ es_clustername}}-{{ kbn_hostname}}.p12" -cacerts -nokeys -out "{{ local_install_dir }}/{{es _clustername}}.crt" -password "pass:{{ es_clustername}}"
+     creates: "{{ local_install_dir }}/{{es _clustername}}.crt"
+#  when: ca_p12.stat.exists == false 
+  tags:
+    - ca
+    - pem
 
 # - name: Create http  cert
 #   ansible.builtin.command:
