--- a/inventories/singlenode.yml
+++ b/inventories/singlenode.yml
@@ -1,14 +1,15 @@
 all: # keys must be unique, i.e. only one 'hosts' per group
     children:   # key order does not matter, indentation does
+        vars:
+            es_tls: true
+            kbn_hostname: "kibana"
+            es_clustername: singlenode
         elastic:
             children:
             vars:
-                es_clustername: singlenode
                 es_elasticsearch_yml: "singlenode.elasticsearch.yml.j2"
                 es_discovery_seed_hosts : ['node1']
                 es_cluster_initial_master_nodes: ['node1']
-                es_tls: true
-                kbn_hostname: "kibana"
             hosts:
                 node1:
                   es_node_roles: ['master','data' ]
