--- a/roles/ntpd/configure/handlers/main.yml
+++ b/roles/ntpd/configure/handlers/main.yml
@@ -1,2 +1,9 @@
 ---
 # handlers file for configure
+
+---
+# handlers file for configure
+- name: restart
+  service:
+    name: "ntpd"
+    state: "restarted"
