--- a/roles/ntpd/configure/tasks/main.yml
+++ b/roles/ntpd/configure/tasks/main.yml
@@ -2,6 +2,6 @@
 # tasks file for configure
 - name: Update pool
   ansible.builtin.command:
-    cmd: ntpdate -u -s 0.centos.pool.ntp.org 1.centos.pool.ntp.org 2.centos.pool.ntp.org
+    cmd: timedatectl set-ntp true
   tags:
     - configure
