--- a/inventories/singlenode.yml
+++ b/inventories/singlenode.yml
@@ -3,6 +3,7 @@ all: # keys must be unique, i.e. only one 'hosts' per group
         es_tls: true
         kbn_hostname: "kibana"
         es_clustername: singlenode
+        mb_ingest: node1
     children:   # key order does not matter, indentation does
         elastic:
             children:
