--- a/roles/metricbeat/configure/tasks/main.yml
+++ b/roles/metricbeat/configure/tasks/main.yml
@@ -35,3 +35,12 @@
     - restart
   tags:
     - configure  
+
+- name: Configure metricbeat.yml
+  template:
+    src: "metricbeat.yml.j2"
+    dest: "/etc/metricbeat/metricbeat.yml"
+  notify:
+    - restart
+  tags:
+    - configure  
