--- a/inventories/group_vars/all.yml
+++ b/inventories/group_vars/all.yml
@@ -1,3 +1,5 @@
 elastic_version: "7.15.2"
 local_install_dir: "/opt/ansible/elastic-install/files"
 remote_install_dir: "/tmp"
+volume_group: 'vg_data'
+logical_volume: 'lv_data'
