--- a/roles/elastic/requirements/tasks/main.yml
+++ b/roles/elastic/requirements/tasks/main.yml
@@ -6,12 +6,18 @@
   copy:
     src: "{{ local_install_dir}}/GPG-KEY-elasticsearch"
     dest: "{{ remote_install_dir}}/GPG-KEY-elasticsearch"
+  tags:
+    - requirements  
 
 - rpm_key:
     state: present
     key: "{{ remote_install_dir}}/GPG-KEY-elasticsearch"
+  tags:
+    - requirements  
 
 - name: Remove file
   file:
     path: "{{ remote_install_dir}}/GPG-KEY-elasticsearch"
     state: absent         
+  tags:
+    - requirements  
